Reworked the core of the game